--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "@payloadcms/ui": "3.72.0",
     "@react-google-maps/api": "^2.20.8",
     "@tailwindcss/postcss": "^4.1.18",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "15.4.10",
+    "next-intl": "^4.8.2",
     "payload": "3.72.0",
     "postcss": "^8.5.6",
     "react": "19.2.1",
