--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql": "^16.8.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
+    "motion": "^12.34.0",
     "next": "15.4.10",
     "next-intl": "^4.8.2",
     "payload": "3.72.0",
