--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "payload": "3.72.0",
     "postcss": "^8.5.6",
     "react": "19.2.1",
+    "react-cookie-consent": "^10.0.1",
     "react-dom": "19.2.1",
     "react-leaflet": "^5.0.0",
     "react-simple-maps": "^3.0.0",
