--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^3.0.3",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
+    "flag-icons": "^7.5.0",
     "graphql": "^16.8.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
